More project metadata in POM

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,33 @@
     <url>https://github.com/AtomGraph/JSON2XML</url>
     <inceptionYear>2019</inceptionYear>
 
+    <developers>
+        <developer>
+            <id>namedgraph</id>
+            <email>martynas@atomgraph.com</email>
+            <roles>
+                <role>Developer</role>
+                <role>Founder</role>
+            </roles>
+            <organization>AtomGraph</organization>
+            <organizationUrl>https://atomgraph.com</organizationUrl>
+        </developer>
+    </developers>
+    
+    <licenses>
+        <license>
+            <name>Apache License 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    
+    <scm>
+        <url>https://github.com/AtomGraph/JSON2XML</url>
+        <connection>scm:git:git://github.com/AtomGraph/JSON2XML.git</connection>
+        <developerConnection>scm:git:git@github.com:AtomGraph/JSON2XML.git</developerConnection>
+    </scm>
+    
     <dependencies>
         <dependency>
             <groupId>javax.json</groupId>
