--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.atomgraph.etl.json</groupId>
     <artifactId>json2xml</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.0.6</version>
     <packaging>jar</packaging>
 
     <name>JSON2XML</name>
@@ -37,7 +37,7 @@
         <url>https://github.com/AtomGraph/JSON2XML</url>
         <connection>scm:git:git://github.com/AtomGraph/JSON2XML.git</connection>
         <developerConnection>scm:git:git@github.com:AtomGraph/JSON2XML.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>json2xml-1.0.6</tag>
   </scm>
     
     <properties>
